[package]
name = "fingerbrow"
version = "0.1.0"
description = "Open-source, self-hosted browser fingerprint profile manager"
authors = ["FingerBrow contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "fingerbrow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
